[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/ui_bar2.png" type="Texture" id=1]
[ext_resource path="res://actor/player/ui_component/Build_buttons.gd" type="Script" id=2]
[ext_resource path="res://assets/icon/barack_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/icon/wall_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/icon/tower_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/icon/goldmine_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/icon/wall_icon_disable.png" type="Texture" id=7]
[ext_resource path="res://assets/icon/barack_icon_disable.png" type="Texture" id=8]
[ext_resource path="res://assets/icon/tower_icon_disable.png" type="Texture" id=9]
[ext_resource path="res://assets/icon/goldmine_icon_disable.png" type="Texture" id=10]

[node name="build_buttons" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -568.0
margin_top = 930.0
margin_right = -284.0
margin_bottom = -73.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -285.0
margin_top = -78.0
margin_right = -203.0
margin_bottom = -2.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -77.0
margin_right = -136.0
margin_bottom = -2.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="."]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -148.0
margin_top = -78.0
margin_right = -74.0
margin_bottom = -2.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="."]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -78.0
margin_bottom = -2.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listButton" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -276.0
margin_top = -74.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildGoldMine" type="TextureButton" parent="listButton"]
margin_right = 64.0
margin_bottom = 74.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 10 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildBarrack" type="TextureButton" parent="listButton"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 74.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildTower" type="TextureButton" parent="listButton"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 74.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 9 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildWall" type="TextureButton" parent="listButton"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 74.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="listButton/buildGoldMine" to="." method="_on_buildGoldMine_button_up"]
[connection signal="button_up" from="listButton/buildBarrack" to="." method="_on_buildBarrack_button_up"]
[connection signal="button_up" from="listButton/buildTower" to="." method="_on_buildTower_button_up"]
[connection signal="button_up" from="listButton/buildWall" to="." method="_on_buildWall_button_up"]
